--- a/src/views/client/posts/postEdit.ejs
+++ b/src/views/client/posts/postEdit.ejs
@@ -1,119 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>게시글 수정</title>
-  <link rel="stylesheet" href="/static/styles/pages/posts/postEdit.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
- 
-  <div id="wrap">
-    <div class="inner">
-      <%- include('../../_layouts/header-menu-w') %>
-    </div>
-    
-    <div class="inner container">
-      <form id="postWriteForm" class="flex-column-center">
-        <!-- 카테고리 선택 시작 -->
-        <label for="category" class="category">
-          <!-- <span>카테고리 선택</span> -->
-          <select name="category" id="category" class="category" required>
-            <option disabled selected>카테고리 선택</option>
-              <!-- <% if (post.category.id && post.category.title) { %> -->
-                <option value="<%= post.category.id %>"><%= post.category.title %></option>
-              <!-- <% } %> -->
-          </select>
-        </label>
-      <!-- 카테고리 선택 끝 -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>게시글 수정</title>
+        <link rel="stylesheet" href="/static/styles/pages/posts/postEdit.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+    </head>
+    <body>
+        <div id="wrap">
+            <div class="inner">
+                <%- include('../../_layouts/header-menu-w',{ category: category
+                }) %>
+            </div>
 
-        <!-- 제목 입력 시작 -->
-        <label for="title" class="title">
-          <!-- <span>제목</span> -->
-          <input type="text" name="title" id="title" required placeholder="제목을 작성해 주세요." />
-        </label>
-        <!-- 제목 입력 끝 -->
-        <!-- <div id="summernote"></div> -->
+            <div class="inner container">
+                <form id="postWriteForm" class="flex-column-center">
+                    <!-- 카테고리 선택 시작 -->
+                    <label for="category" class="category">
+                        <!-- <span>카테고리 선택</span> -->
+                        <select
+                            name="category"
+                            id="category"
+                            class="category"
+                            required
+                        >
+                            <option disabled selected>카테고리 선택</option>
+                            <!-- <% if (post.category.id && post.category.title) { %> -->
+                            <option value="<%= post.category.id %>">
+                                <%= post.category.title %>
+                            </option>
+                            <!-- <% } %> -->
+                        </select>
+                    </label>
+                    <!-- 카테고리 선택 끝 -->
 
-        
-        <!-- 내용 입력 시작 -->
-          
-        <div class="contentArea">
-          <!-- <div id="content" contenteditable="true" placeholder="게시글 내용을 작성해 주세요."></div> -->
-          <textarea name="content" id="content" maxlength= "2000" placeholder="게시글 내용을 작성해 주세요."></textarea>
-          <div class="upload">
-            <label for="file">
-                <img src="/static/images/upload-btn-gray.svg" class="formImg" alt="파일업로드버튼" />
-            </label>
-            <input type="file" id="file" />
-          </div>
+                    <!-- 제목 입력 시작 -->
+                    <label for="title" class="title">
+                        <!-- <span>제목</span> -->
+                        <input
+                            type="text"
+                            name="title"
+                            id="title"
+                            required
+                            placeholder="제목을 작성해 주세요."
+                        />
+                    </label>
+                    <!-- 제목 입력 끝 -->
+                    <!-- <div id="summernote"></div> -->
+
+                    <!-- 내용 입력 시작 -->
+
+                    <div class="contentArea">
+                        <!-- <div id="content" contenteditable="true" placeholder="게시글 내용을 작성해 주세요."></div> -->
+                        <textarea
+                            name="content"
+                            id="content"
+                            maxlength="2000"
+                            placeholder="게시글 내용을 작성해 주세요."
+                        ></textarea>
+                        <div class="upload">
+                            <label for="file">
+                                <img
+                                    src="/static/images/upload-btn-gray.svg"
+                                    class="formImg"
+                                    alt="파일업로드버튼"
+                                />
+                            </label>
+                            <input type="file" id="file" />
+                        </div>
+                    </div>
+
+                    <!-- 내용 입력 끝 -->
+
+                    <!-- 작성 (제출) 버튼 -->
+                    <button type="submit">수정 완료</button>
+                </form>
+            </div>
         </div>
 
-        <!-- 내용 입력 끝 -->
-       
-          <!-- 작성 (제출) 버튼 -->
-        <button type="submit">수정 완료</button>
-      </form>
-  </div>
+        <script>
+            const $deleteButton = document.getElementById("delete-button");
 
-</div>
+            const cookies = document.cookie.split(";").reduce((acc, cookie) => {
+                const [key, value] = cookie.split("=");
+                acc[key.trim()] = decodeURIComponent(value);
+                return acc;
+            }, {});
 
+            const token = `${cookies.accessToken}`;
 
-  
-  <script>
-    const $deleteButton = document.getElementById("delete-button");
+            $deleteButton?.addEventListener("click", async () => {
+                try {
+                    const res = await fetch("/api/posts/<%= post.postId %>", {
+                        method: "delete",
+                        headers: {
+                            "Content-Type": "application/json",
+                            authorization: token,
+                        },
+                    });
 
-    const cookies = document.cookie.split(";").reduce((acc, cookie) => {
-      const [key, value] = cookie.split("=");
-      acc[key.trim()] = decodeURIComponent(value);
-      return acc;
-    }, {});
+                    if (!res.ok) {
+                        throw new Error("게시글 삭제에 실패했습니다.");
+                    }
 
-    const token = `${cookies.accessToken}`;
+                    location.href = "/posts";
+                } catch (error) {
+                    console.error("게시글 작성에 실패했습니다.");
+                }
+            });
 
-    $deleteButton?.addEventListener("click", async () => {
-      try {
-        const res = await fetch("/api/posts/<%= post.postId %>", {
-          method: "delete",
-          headers: {
-            "Content-Type": "application/json",
-            authorization: token,
-          },
-        });
+            // 카테고리 데이터 가져오기
+            const categories = [
+                {
+                    categoryId: "66f247f68d1dffeca42e1a10",
+                    title: "👨‍💻 개발 나눔숲",
+                },
+                {
+                    categoryId: "66f24da1aa8f0092f375865a",
+                    title: "🎬 영화 나눔숲",
+                },
+                {
+                    categoryId: "66f264b40d793036e28637e8",
+                    title: "🍜 맛집 나눔숲",
+                },
+                {
+                    categoryId: "66f28957453960e94559ae7d",
+                    title: "💭 잡담 나눔숲",
+                },
+                {
+                    categoryId: "66f28a54453960e94559ae80",
+                    title: "💪 운동 나눔숲",
+                },
+            ];
 
-        if (!res.ok) {
-          throw new Error("게시글 삭제에 실패했습니다.");
-        }
+            // select 요소 가져오기
+            const $category = document.getElementById("category");
 
-        location.href = "/posts";
-      } catch (error) {
-        console.error("게시글 작성에 실패했습니다.");
-      }
-    });
-
-
-    // 카테고리 데이터 가져오기
-    const categories = [
-        { "categoryId": "66f247f68d1dffeca42e1a10", "title": "👨‍💻 개발 나눔숲" },
-        { "categoryId": "66f24da1aa8f0092f375865a", "title": "🎬 영화 나눔숲" },
-        { "categoryId": "66f264b40d793036e28637e8", "title": "🍜 맛집 나눔숲" },
-        { "categoryId": "66f28957453960e94559ae7d", "title": "💭 잡담 나눔숲" },
-        { "categoryId": "66f28a54453960e94559ae80", "title": "💪 운동 나눔숲" },
-    ];
-
-    // select 요소 가져오기
-    const $category = document.getElementById('category');
-
-    // 옵션 추가 하기
-    categories.forEach(category => {
-    
-        const option = document.createElement('option');
-        option.value = category.categoryId; // value 속성에 categoryId 할당해주기
-        option.textContent = category.title; // 표시할 텍스트에 title 할당해주기
-        $category.appendChild(option); // select 요소에 옵션 추가
-
-    });
-  </script>
-</body>
+            // 옵션 추가 하기
+            categories.forEach((category) => {
+                const option = document.createElement("option");
+                option.value = category.categoryId; // value 속성에 categoryId 할당해주기
+                option.textContent = category.title; // 표시할 텍스트에 title 할당해주기
+                $category.appendChild(option); // select 요소에 옵션 추가
+            });
+        </script>
+    </body>
 </html>
