--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -74,7 +74,7 @@
 
 
                 confirmBtn.addEventListener("click", function () {
-                    window.location.href = "/login";
+                    window.location.href = "/views/login";
                 });
             });
         </script>
